# Project_Layered_Software_Architecture_Standard

./: CMakeLists.txt  LICENSE  README.md
device/hardware/include/: button.h
device/hardware/src/: button.c
docs/: embedded_system_project_guideline.docx
